[gd_scene load_steps=5 format=3 uid="uid://dki6cesf6s3jt"]

[ext_resource type="Script" path="res://Menu/slots_menu/parts/slot_data_control/slot_data_control.gd" id="1_xeq1t"]
[ext_resource type="PackedScene" uid="uid://crmma1xtnk53b" path="res://UI/label/title.tscn" id="2_ttfme"]
[ext_resource type="PackedScene" uid="uid://cv385iasb73a4" path="res://UI/label/label.tscn" id="2_xyiu7"]
[ext_resource type="PackedScene" uid="uid://boj1rnahsrt5c" path="res://UI/button/button.tscn" id="3_apmck"]

[node name="slot_data_control" type="Control"]
custom_minimum_size = Vector2(144, 160)
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 160.0
script = ExtResource("1_xeq1t")

[node name="slot_name_label" parent="." instance=ExtResource("2_ttfme")]
position = Vector2(72, 8)
centered = true

[node name="datetime_label" parent="." instance=ExtResource("2_xyiu7")]
position = Vector2(72, 40)
centered = true
vertical_centered = true

[node name="start_button" parent="." instance=ExtResource("3_apmck")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 8.0
offset_top = 72.0
offset_right = 72.0
offset_bottom = 88.0
grow_horizontal = 1
grow_vertical = 1
text = "Play"

[node name="delete_button" parent="." instance=ExtResource("3_apmck")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 72.0
offset_top = 72.0
offset_right = 136.0
offset_bottom = 88.0
grow_horizontal = 1
grow_vertical = 1
text = "Delete"

[connection signal="pressed" from="start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="delete_button" to="." method="_on_delete_button_pressed"]
